SET(LIB_NAME physics)
SET(LIB_OUTNAME octoon-${LIB_NAME})

SET(HEADER_PATH ${OCTOON_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${OCTOON_PATH_SOURCE}/${LIB_OUTNAME})

SET(PHYSICS_LIST
	${HEADER_PATH}/physics_material.h
	${SOURCE_PATH}/physics_material.cpp
	${HEADER_PATH}/physics_rigidbody.h
	${SOURCE_PATH}/physics_rigidbody.cpp
	${HEADER_PATH}/physics_scene.h
	${SOURCE_PATH}/physics_scene.cpp
	${HEADER_PATH}/physics_system.h
	${SOURCE_PATH}/physics_system.cpp
	${HEADER_PATH}/physics_types.h
)
SOURCE_GROUP(${LIB_NAME} FILES ${PHYSICS_LIST})

FILE(GLOB RENDERER_PHYSX_HEADER "Physx/*.h")
FILE(GLOB RENDERER_PHYSX_SOURCE "Physx/*.cpp")
FILE(GLOB RENDERER_BULLET_HEADER "bullet/*.h")
FILE(GLOB RENDERER_BULLET_SOURCE "bullet/*.cpp")

SET(PHYSICS_PHYSX ${RENDERER_PHYSX_HEADER} ${RENDERER_PHYSX_SOURCE})
SET(PHYSICS_BULLET ${RENDERER_BULLET_HEADER} ${RENDERER_BULLET_SOURCE})

SOURCE_GROUP("Physx" FILES ${PHYSICS_PHYSX})
SOURCE_GROUP("bullet" FILES ${PHYSICS_BULLET})

ADD_DEFINITIONS(-DOCTOON_STATIC)
ADD_LIBRARY(${LIB_OUTNAME} STATIC ${PHYSICS_LIST})

IF(OCTOON_BUILD_PLATFORM_ANDROID)
    TARGET_LINK_LIBRARIES (${LIB_OUTNAME} PRIVATE m)
ENDIF()

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "core")