PROJECT(PhysX)

SET(LIB_NAME PhysX)

FILE(GLOB_RECURSE BC_LIST Lib/HTML5/*.bc)

IF(OCTOON_BUILD_SHARED_DLL)
    ADD_LIBRARY(LowLevel SHARED Lib/HTML5/LowLevel_Oz.bc)
    ADD_LIBRARY(LowLevelAABB SHARED Lib/HTML5/LowLevelAABB_Oz.bc)
    ADD_LIBRARY(LowLevelCloth SHARED Lib/HTML5/LowLevelCloth_Oz.bc)
    ADD_LIBRARY(LowLevelDynamics SHARED Lib/HTML5/LowLevelDynamics_Oz.bc)
    ADD_LIBRARY(LowLevelParticles SHARED Lib/HTML5/LowLevelParticles_Oz.bc)
    ADD_LIBRARY(PsFastXml SHARED Lib/HTML5/PsFastXml_Oz.bc)
    ADD_LIBRARY(PxPvdSDK SHARED Lib/HTML5/PxPvdSDK_Oz.bc)
    ADD_LIBRARY(PxTask SHARED Lib/HTML5/PxTask_Oz.bc)
    ADD_LIBRARY(SceneQuery SHARED Lib/HTML5/SceneQuery_Oz.bc)
    ADD_LIBRARY(SimulationController SHARED Lib/HTML5/SimulationController_Oz.bc)

    ADD_LIBRARY(PhysX3 SHARED Lib/HTML5/PhysX3_Oz.bc)
    ADD_LIBRARY(PhysX3Common SHARED Lib/HTML5/PhysX3Common_Oz.bc)
    ADD_LIBRARY(PhysX3CharacterKinematic SHARED Lib/HTML5/PhysX3CharacterKinematic_Oz.bc)
    ADD_LIBRARY(PhysX3Cooking SHARED Lib/HTML5/PhysX3Cooking_Oz.bc)
    ADD_LIBRARY(PhysX3Vehicle SHARED Lib/HTML5/PhysX3Vehicle_Oz.bc)
    ADD_LIBRARY(PhysX3Extensions SHARED Lib/HTML5/PhysX3Extensions_Oz.bc)
    ADD_LIBRARY(PxFoundation SHARED Lib/HTML5/PxFoundation_Oz.bc)

    set_target_properties(LowLevel PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(LowLevelAABB PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(LowLevelCloth PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(LowLevelDynamics PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(LowLevelParticles PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PsFastXml PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PxPvdSDK PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PxTask PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(SceneQuery PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(SimulationController PROPERTIES LINKER_LANGUAGE CXX)

    set_target_properties(PhysX3 PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PhysX3Common PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PhysX3CharacterKinematic PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PhysX3Cooking PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PhysX3Vehicle PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PhysX3Extensions PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PxFoundation PROPERTIES LINKER_LANGUAGE CXX)

    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC LowLevel)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC LowLevelCloth)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC LowLevelAABB)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC LowLevelDynamics)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC LowLevelParticles)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC PhysX3Common)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC PxTask)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC PxPvdSDK)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC PxFoundation)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC SceneQuery)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC SimulationController)

    TARGET_LINK_LIBRARIES(PhysX3CharacterKinematic PUBLIC PhysX3Extensions)
    TARGET_LINK_LIBRARIES(PhysX3CharacterKinematic PUBLIC PhysX3Common)
    TARGET_LINK_LIBRARIES(PhysX3CharacterKinematic PUBLIC PxFoundation)

    TARGET_LINK_LIBRARIES(PhysX3Cooking PUBLIC PxFoundation)
    TARGET_LINK_LIBRARIES(PhysX3Cooking PUBLIC PhysX3Common)
    TARGET_LINK_LIBRARIES(PhysX3Cooking PUBLIC PhysX3Extensions)

    TARGET_LINK_LIBRARIES(PhysX3Extensions PUBLIC PsFastXml)

    TARGET_LINK_LIBRARIES(PhysX3Common PUBLIC PxFoundation)
ELSE()
    ADD_LIBRARY(LowLevel Lib/HTML5/LowLevel_Oz.bc)
    ADD_LIBRARY(LowLevelAABB Lib/HTML5/LowLevelAABB_Oz.bc)
    ADD_LIBRARY(LowLevelCloth Lib/HTML5/LowLevelCloth_Oz.bc)
    ADD_LIBRARY(LowLevelDynamics Lib/HTML5/LowLevelDynamics_Oz.bc)
    ADD_LIBRARY(LowLevelParticles Lib/HTML5/LowLevelParticles_Oz.bc)
    ADD_LIBRARY(PsFastXml Lib/HTML5/PsFastXml_Oz.bc)
    ADD_LIBRARY(PxPvdSDK Lib/HTML5/PxPvdSDK_Oz.bc)
    ADD_LIBRARY(PxTask Lib/HTML5/PxTask_Oz.bc)
    ADD_LIBRARY(SceneQuery Lib/HTML5/SceneQuery_Oz.bc)
    ADD_LIBRARY(SimulationController Lib/HTML5/SimulationController_Oz.bc)

    ADD_LIBRARY(PhysX3 Lib/HTML5/PhysX3_Oz.bc)
    ADD_LIBRARY(PhysX3Common Lib/HTML5/PhysX3Common_Oz.bc)
    ADD_LIBRARY(PhysX3CharacterKinematic Lib/HTML5/PhysX3CharacterKinematic_Oz.bc)
    ADD_LIBRARY(PhysX3Cooking Lib/HTML5/PhysX3Cooking_Oz.bc)
    ADD_LIBRARY(PhysX3Vehicle Lib/HTML5/PhysX3Vehicle_Oz.bc)
    ADD_LIBRARY(PhysX3Extensions Lib/HTML5/PhysX3Extensions_Oz.bc)
    ADD_LIBRARY(PxFoundation Lib/HTML5/PxFoundation_Oz.bc)

    set_target_properties(LowLevel PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(LowLevelAABB PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(LowLevelCloth PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(LowLevelDynamics PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(LowLevelParticles PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PsFastXml PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PxPvdSDK PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PxTask PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(SceneQuery PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(SimulationController PROPERTIES LINKER_LANGUAGE CXX)

    set_target_properties(PhysX3 PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PhysX3Common PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PhysX3CharacterKinematic PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PhysX3Cooking PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PhysX3Vehicle PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PhysX3Extensions PROPERTIES LINKER_LANGUAGE CXX)
    set_target_properties(PxFoundation PROPERTIES LINKER_LANGUAGE CXX)

    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC LowLevel)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC LowLevelCloth)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC LowLevelAABB)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC LowLevelDynamics)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC LowLevelParticles)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC PhysX3Common)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC PxTask)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC PxPvdSDK)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC PxFoundation)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC SceneQuery)
    TARGET_LINK_LIBRARIES(PhysX3 PUBLIC SimulationController)

    TARGET_LINK_LIBRARIES(PhysX3CharacterKinematic PUBLIC PhysX3Extensions)
    TARGET_LINK_LIBRARIES(PhysX3CharacterKinematic PUBLIC PhysX3Common)
    TARGET_LINK_LIBRARIES(PhysX3CharacterKinematic PUBLIC PxFoundation)

    TARGET_LINK_LIBRARIES(PhysX3Cooking PUBLIC PxFoundation)
    TARGET_LINK_LIBRARIES(PhysX3Cooking PUBLIC PhysX3Common)
    TARGET_LINK_LIBRARIES(PhysX3Cooking PUBLIC PhysX3Extensions)

    TARGET_LINK_LIBRARIES(PhysX3Extensions PUBLIC PsFastXml)

    TARGET_LINK_LIBRARIES(PhysX3Common PUBLIC PxFoundation)
ENDIF()